--- a/css/theme_bf.css
+++ b/css/theme_bf.css
@@ -190,6 +190,10 @@ li.active .ic_welcome {
     background-image: url(/images/bf/icons/sensor_sonar_on.png);
 }
 
+.stalkericon.active {
+    background-image: url(/images/bf/icons/sensor_stalker_on.png);
+}
+
 .tab-landing .content_wrapper {
     background-color: #2e2e2e;
 }
